[gd_scene load_steps=43 format=3 uid="uid://ddl0mhwg8t8wq"]

[ext_resource type="PackedScene" uid="uid://0o74rhlcl0mw" path="res://Character/enemy.tscn" id="1_uo517"]
[ext_resource type="Script" uid="uid://bmbv3fqsupyeh" path="res://Character/wild_boar.gd" id="2_s7x8x"]
[ext_resource type="Texture2D" uid="uid://c2ffepmdejecu" path="res://Artwork/Character Assets/Wild Boar/Idle-Sheet - Color 3.png" id="2_x05wg"]
[ext_resource type="Shader" uid="uid://u8pu6fvvk2sn" path="res://Artwork/Materials/flash.gdshader" id="3_ndboh"]
[ext_resource type="Texture2D" uid="uid://djhpa68e8pts5" path="res://Artwork/Character Assets/Wild Boar/Walk-Sheet - Color 3.png" id="3_yw3eo"]
[ext_resource type="Texture2D" uid="uid://d0k5m42yveqe" path="res://Artwork/Character Assets/Wild Boar/Run-Sheet - Color 3.png" id="4_yw3eo"]
[ext_resource type="Texture2D" uid="uid://caxgyjsv5kben" path="res://Artwork/Character Assets/Wild Boar/Attack - Color 3.png" id="5_ll6ji"]
[ext_resource type="Texture2D" uid="uid://dhxpwj12jtvon" path="res://Artwork/Character Assets/Wild Boar/Die-Sheet - Color 3.png" id="6_ymvjr"]
[ext_resource type="Script" uid="uid://bdhe2eo14p346" path="res://Classes/hitbox.gd" id="8_byarl"]
[ext_resource type="Texture2D" uid="uid://dm5ghp4xcurbm" path="res://Artwork/FX/Sparks-Sheet.png" id="9_waf7i"]
[ext_resource type="PackedScene" uid="uid://ces1dpkwb85mw" path="res://UI/boss_health_bar.tscn" id="10_waf7i"]
[ext_resource type="Script" uid="uid://cipqe1pvd7v1t" path="res://Classes/attribute.gd" id="11_2t476"]
[ext_resource type="AudioStream" uid="uid://cur0ow7vokiko" path="res://SFX/WildBoarIdle.ogg" id="12_fuva3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fuva3"]
shader = ExtResource("3_ndboh")
shader_parameter/quantity = 0.0
shader_parameter/effect_tint = 1.0
shader_parameter/target_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hcng"]
size = Vector2(48, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s7x8x"]
radius = 16.0
height = 48.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_byarl"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_fuva3"]
atlas = ExtResource("9_waf7i")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t476"]
atlas = ExtResource("9_waf7i")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7i2t"]
atlas = ExtResource("9_waf7i")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb4vq"]
atlas = ExtResource("9_waf7i")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7yp4"]
atlas = ExtResource("9_waf7i")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6u1q"]
atlas = ExtResource("9_waf7i")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uib74"]
atlas = ExtResource("9_waf7i")
region = Rect2(0, 192, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_2wxdk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuva3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t476")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7i2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb4vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7yp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6u1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uib74")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ndboh"]
size = Vector2(40, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7x8x"]
size = Vector2(32, 8)

[sub_resource type="Animation" id="Animation_ymvjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphics/Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 256, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphics/Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_x05wg")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphics/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Graphics/Sprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Graphics/Sprite2D:material")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_fuva3")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../IdleSFX:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ndboh"]
shader = ExtResource("3_ndboh")
shader_parameter/quantity = 0.0
shader_parameter/effect_tint = 0.0
shader_parameter/target_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_byarl"]
resource_name = "Attack"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ll6ji")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphics/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphics/Sprite2D:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 384, 64)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphics/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.15, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"on_attack_frame"
}, {
"args": [],
"method": &"end_attack_frame"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Graphics/Sprite2D:material")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_ndboh")]
}

[sub_resource type="Animation" id="Animation_waf7i"]
resource_name = "die"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ymvjr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphics/Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 384, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphics/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphics/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Graphics/Sprite2D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Graphics/Sprite2D:material")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_ll6ji"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphics/Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 256, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphics/Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_x05wg")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphics/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Graphics/Sprite2D:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_ndboh")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../IdleSFX:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0hcng"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_yw3eo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphics/Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 576, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphics/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphics/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Graphics/Sprite2D:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_ndboh")]
}

[sub_resource type="Animation" id="Animation_s7x8x"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_yw3eo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Graphics/Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 768, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Graphics/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Graphics/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Graphics/Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Graphics/Sprite2D:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_ndboh")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hcng"]
_data = {
&"RESET": SubResource("Animation_ymvjr"),
&"attack": SubResource("Animation_byarl"),
&"die": SubResource("Animation_waf7i"),
&"idle": SubResource("Animation_ll6ji"),
&"run": SubResource("Animation_0hcng"),
&"walk": SubResource("Animation_s7x8x")
}

[sub_resource type="Resource" id="Resource_eb4vq"]
script = ExtResource("11_2t476")
base_value = 50
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[sub_resource type="Resource" id="Resource_b7yp4"]
script = ExtResource("11_2t476")
base_value = 0
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[sub_resource type="Resource" id="Resource_h6u1q"]
script = ExtResource("11_2t476")
base_value = 0
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[sub_resource type="Resource" id="Resource_uib74"]
script = ExtResource("11_2t476")
base_value = 100
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[sub_resource type="Resource" id="Resource_2wxdk"]
script = ExtResource("11_2t476")
base_value = 0
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[sub_resource type="Resource" id="Resource_2t476"]
script = ExtResource("11_2t476")
base_value = 0
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[sub_resource type="Resource" id="Resource_j7i2t"]
script = ExtResource("11_2t476")
base_value = 2000
modifiers = []
metadata/_custom_type_script = "uid://cipqe1pvd7v1t"

[node name="WildBoar" groups=["boss"] instance=ExtResource("1_uo517")]
script = ExtResource("2_s7x8x")
max_speed = 200.0

[node name="Sprite2D" parent="Graphics" index="0"]
material = SubResource("ShaderMaterial_fuva3")
position = Vector2(0, -24)
texture = ExtResource("2_x05wg")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 256, 48)

[node name="CollisionShape2D" parent="Graphics/Hitbox" index="0"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_0hcng")

[node name="CollisionShape2D" parent="Graphics/Hurtbox" index="0"]
position = Vector2(0, -16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s7x8x")
debug_color = Color(0.746679, 0.462009, 1.92523e-07, 0.42)

[node name="WallChecker" type="RayCast2D" parent="Graphics" index="3"]
position = Vector2(-9, -21)
target_position = Vector2(-21, 0)

[node name="AttackFX" type="AnimatedSprite2D" parent="Graphics" index="4"]
self_modulate = Color(1, 1, 0.701961, 1)
material = SubResource("CanvasItemMaterial_byarl")
position = Vector2(-48, -16)
rotation = 3.14159
scale = Vector2(0.8, -0.8)
sprite_frames = SubResource("SpriteFrames_2wxdk")
frame_progress = 0.348938

[node name="Attackbox" type="Area2D" parent="Graphics/AttackFX" index="0"]
position = Vector2(-27, 16)
rotation = 3.14159
scale = Vector2(1, -1)
collision_layer = 0
collision_mask = 8
script = ExtResource("8_byarl")
metadata/_custom_type_script = "uid://bdhe2eo14p346"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/AttackFX/Attackbox" index="0"]
position = Vector2(-17, -10.9999)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_ndboh")
debug_color = Color(0.891007, 0.000245852, 0.791487, 0.42)

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(8, -4)
shape = SubResource("RectangleShape2D_s7x8x")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
&"": SubResource("AnimationLibrary_0hcng")
}

[node name="Stats" parent="." index="4"]
strength = SubResource("Resource_eb4vq")
agility = SubResource("Resource_b7yp4")
intelligence = SubResource("Resource_h6u1q")
vitality = SubResource("Resource_uib74")
luck = SubResource("Resource_2wxdk")
damage = SubResource("Resource_2t476")
max_health = SubResource("Resource_j7i2t")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]
layer = 10

[node name="BossHealthBar" parent="CanvasLayer" index="0" node_paths=PackedStringArray("stats") instance=ExtResource("10_waf7i")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 4
stats = NodePath("../../Stats")

[node name="WaitForBattleStart" type="Timer" parent="." index="6"]
wait_time = 1.5
one_shot = true

[node name="IdleSFX" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource("12_fuva3")
max_distance = 500.0
attenuation = 0.68302
bus = &"SFX"

[node name="IgniteEffects" parent="." index="8"]
position = Vector2(0, -19)
scale = Vector2(1.2, 1.2)
frame = 8
frame_progress = 1.0

[node name="FreezeEffects" parent="." index="9"]
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
frame = 6
frame_progress = 1.0

[connection signal="hurt" from="Graphics/Hurtbox" to="." method="_on_hurtbox_hurt"]
